--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
         </div>
     </section>
     <section>
-        <iframe src="https://phhs-thehue.com/vr_221216/index.html" width="100%" height="500"></iframe>
+        <div class="container px-4 px-lg-5">
+        <div class="col-12">
+            <iframe src="https://phhs-thehue.com//vr_221216/index.html" width="100%" height="500"></iframe>
+                </div>
+                </div>
     </section>
         <!-- Contact-->
         <section class="page-section mt-0 pb-0" id="contact">
