--- a/index.html
+++ b/index.html
@@ -188,11 +188,9 @@
         </div>
     </section>
     <section>
-        <div class="container px-4 px-lg-5">
-        <div class="col-12">
-            <iframe src="https://vr2.dreamvrad.net/haksan_hanshin_thehue/" width="100%" height="500"></iframe>
-                </div>
-                </div>
+        <div class="page-section mt-0 pb-0" class="container px-4 px-lg-5" id="model">
+            <iframe src="./proxy.php" width="100%" height="500"></iframe>
+        </div>
     </section>
         <!-- Contact-->
         <section class="page-section mt-0 pb-0" id="contact">
