--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </section>
     <section>
         <div class="page-section mt-0 pb-0" class="container px-4 px-lg-5" id="model">
-            <iframe src="./proxy.php" width="100%" height="500"></iframe>
+            <iframe src="https://realtykr.netlify.app/proxy.php" width="100%" height="500"></iframe>
         </div>
     </section>
         <!-- Contact-->
