--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <meta name="naver-site-verification" content="1ceef515c8dd0bcb717d6c633b98083cb53aef4e"> -->
         <meta name="subject" content="학산 한신더휴 엘리트파크">
         <meta name="copyright" content="학산 한신더휴 엘리트파크-신정옥">
         <meta name="title" content="학산 한신더휴 엘리트파크">
@@ -18,17 +17,15 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="학산 한신더휴 엘리트파크">
         <meta property="og:site_name" content="학산 한신더휴 엘리트파크-신정옥">
-        <!-- <meta property="og:url" content="http://www.1800-2313.com"> -->
-        <meta property="og:url" content="http://sgbini.dothome.co.kr/hanshin_onepage">
-        <!-- <meta property="og:image" content="http://www.1800-2313.com/image.jpg"> -->
-        <meta property="og:image" content="http://sgbini.dothome.co.kr/hanshin_onepage/image.jpg">
+        <meta property="og:url" content="https://realtykr.netlify.app">
+        <meta property="og:image" content="https://realtykr.netlify.app/image.jpg">
         <meta property="og:image:width" content="630">
         <meta property="og:image:height" content="630">
         <meta property="og:description" content="한신더휴 엘리트파크 | 잔여세대 동호지정계약 | 사업소개 | 입지환경 | 모델하우스 | 상담예약">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="한신더휴 엘리트파크">
         <meta name="twitter:site" content="한신더휴 엘리트파크-신정옥">
-        <meta name="twitter:image" content="http://sgbini.dothome.co.kr/image.jpg">
+        <meta name="twitter:image" content="https://realtykr.netlify.app/image.jpg">
         <meta name="twitter:description" content="한신더휴 엘리트파크 | 잔여세대 동호지정계약 | 사업소개 | 입지환경 | 모델하우스 | 상담예약">
         <title>포항 한신더휴 엘리트파크 분양</title>
         <!-- Favicon-->
@@ -49,7 +46,7 @@
     <body id="page-top">
         <!-- Popup -->
             <div class="popupdiv">
-                <a href='tel:1800-2313'></>><img class="popimg" src="assets/img/popup.jpg" alt="상담전화연결이미지"></a>
+                <a href='tel:1800-2313'><img class="popimg" src="assets/img/popup.jpg" alt="상담전화연결이미지"></a>
                 <button class="close-button">&times;</button>
             </div>
         <!-- Navigation-->
